--- a/app/access/signup.component.css
+++ b/app/access/signup.component.css
@@ -45,3 +45,13 @@ img{
     width: 100px;
     height: 100px;
 }
+.thumbnail:hover{
+    cursor: pointer;
+}
+.check{
+    opacity:0.5;
+	background:lightgreen;
+}
+.aconocimiento{
+    text-align: right;
+}
