--- a/app/access/signup.component.html
+++ b/app/access/signup.component.html
@@ -4,19 +4,21 @@
         <div class="stepwizard-row setup-panel">
             <div class="stepwizard-step">
                 <div [ngClass]="currentStep == 1 ? 'btn btn-primary btn-circle':'btn btn-default btn-circle'">1</div>
-                <p>Paso 1</p>
             </div>
             <div (click)="verifyStep1()" class="stepwizard-step">
                 <div [ngClass]="currentStep == 2 ? 'btn btn-primary btn-circle':'btn btn-default btn-circle'">2</div>
-                <p>Paso 2</p>
             </div>
             <div (click)="verifyStep2()" class="stepwizard-step">
                 <div [ngClass]="currentStep == 3 ? 'btn btn-primary btn-circle':'btn btn-default btn-circle'">3</div>
-                <p>Paso 3</p>
             </div>
             <div (click)="verifyStep3()" class="stepwizard-step">
                 <div [ngClass]="currentStep == 4 ? 'btn btn-primary btn-circle':'btn btn-default btn-circle'">4</div>
-                <p>Paso 4</p>
+            </div>
+            <div (click)="verifyStep3()" class="stepwizard-step">
+                <div [ngClass]="currentStep == 5 ? 'btn btn-primary btn-circle':'btn btn-default btn-circle'">5</div>
+            </div>
+            <div *ngIf="tipoUsuario=='ESTUDIANTE'" (click)="verifyStep3()" class="stepwizard-step">
+                <div [ngClass]="currentStep == 6 ? 'btn btn-primary btn-circle':'btn btn-default btn-circle'">6</div>
             </div>
         </div>
     </div>
@@ -60,9 +62,12 @@
         <div class="form-group">
             <label class="col-sm-2 control-label">Nombre de usuario</label>
             <div class="col-sm-10">
-                <input class="form-control" type="text" placeholder="Click to focus" formControlName="username">
+                <input class="form-control" [(ngModel)]="username" type="text" placeholder="Click to focus" formControlName="username">
                 <div class="alert alert-danger" *ngIf="stepOneForm.get('username').touched && stepOneForm.get('username').hasError('required')">
                     Nombre de usuario es requerido.
+                </div>
+                <div class="alert alert-danger" *ngIf="stepOneForm.get('username').touched && stepOneForm.controls.username.errors?.UsernameTaken">
+                    Nombre de usuario no disponible.
                 </div>
             </div>
         </div>
@@ -100,9 +105,9 @@
             <label class="col-sm-2 control-label">Soy</label>
             <div class="col-sm-10">
                 <select class="form-control" name="tipoUsuario" [(ngModel)]="tipoUsuario">
-                    <option [ngValue]="ESTUDIANTE">Estudiante</option>
-                    <option [ngValue]="PROFESOR">Profesor</option>
-                    <option [ngValue]="EGRESADO">Egresado</option>
+                    <option value="ESTUDIANTE">Estudiante</option>
+                    <option value="PROFESOR">Profesor</option>
+                    <option value="EGRESADO">Egresado</option>
                 </select>
             </div>
         </div>
@@ -114,34 +119,34 @@
                 </select>
             </div>
         </div>
-        <div class="form-group">
+        <div *ngIf="tipoUsuario=='ESTUDIANTE' || tipoUsuario=='EGRESADO'" class="form-group">
             <label class="col-sm-2 control-label">Doble programa</label>
             <div class="col-sm-10">
                 <select class="form-control" name="segundaCarrera" [(ngModel)]="segundaCarrera">
-                    <option [ngValue]="none">Ninguna</option>
+                    <option value="null">Ninguna</option>
                     <option *ngFor="let c of carreras" [ngValue]="c" >{{c.nombre}}</option>
                 </select>
             </div>
         </div>
-        <div class="form-group">
+        <div *ngIf="tipoUsuario=='ESTUDIANTE'" class="form-group">
             <label class="col-sm-2 control-label">Semestre está cursando</label>
             <div class="col-sm-10">
                 <select class="form-control" name="semestre" [(ngModel)]="semestre">
-                    <option [ngValue]=1 selected>1</option>
-                    <option [ngValue]=2>2</option>
-                    <option [ngValue]=3>3</option>
-                    <option [ngValue]=4>4</option>
-                    <option [ngValue]=5>5</option>
-                    <option [ngValue]=6>6</option>
-                    <option [ngValue]=7>7</option>
-                    <option [ngValue]=8>8</option>
-                    <option [ngValue]=9>9</option>
-                    <option [ngValue]=10>10</option>
-                    <option [ngValue]=11>10+</option>
+                    <option value=1>1</option>
+                    <option value=2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
+                    <option value=5>5</option>
+                    <option value=6>6</option>
+                    <option value=7>7</option>
+                    <option value=8>8</option>
+                    <option value=9>9</option>
+                    <option value=10>10</option>
+                    <option value=11>10+</option>
                 </select>
             </div>
         </div>
-        <div class="form-group">
+        <div *ngIf="tipoUsuario=='ESTUDIANTE'" class="form-group">
             <label class="col-sm-2 control-label">Cursa actualmente la asignatura de seminario</label>
             <div class="col-sm-10">
                 <select class="form-control" name="seminario" [(ngModel)]="seminario">
@@ -150,7 +155,7 @@
                 </select>
             </div>
         </div>
-        <div class="form-group">
+        <div *ngIf="tipoUsuario=='ESTUDIANTE'" class="form-group">
             <label class="col-sm-2 control-label">Tiene ya definido su tema de Trabajo de Grado</label>
             <div class="col-sm-10">
                 <select class="form-control" name="temaTG" [(ngModel)]="temaTG">
@@ -169,35 +174,234 @@
     <p>Eliga su personalidad (Puede tomar el test aquí: <a target="_blank" href="https://www.16personalities.com/es/test-de-personalidad">Test de Personalidad</a>)
         <div class="row">
             <div class="col-xs-3" *ngFor="let p of personalidades">
-                <a class="link thumbnail"><img src="../../static/images/personalidades/{{p.nombre}}.png" class="img-responsive"></a>
+                <a (click)="verifyStep3(p)" class="thumbnail"><img src="../../static/images/personalidades/{{p.nombre}}.png" class="img-responsive"></a>
             </div>
         </div>
 </div>
 
-<div *ngIf="currentStep == 4" class="well well-lg">
-    <h2>Mi Perfil</h2>
+<!-- step 4 -->
+
+<div *ngIf="currentStep == 4 && tipoUsuario=='ESTUDIANTE'" class="well well-lg">
+    <h2>Mis gustos</h2>
+    <p>Seleccione cada uno de sus gustos.</p>
     <ul class="nav nav-tabs">
-        <li class="active"><a data-toggle="tab" href="#home">Generales</a></li>
-        <li><a data-toggle="tab" href="#menu1">Deportes</a></li>
-        <li><a data-toggle="tab" href="#menu2">Artes</a></li>
-        <li><a data-toggle="tab" href="#menu2">Énfasis</a></li>
-        <li><a data-toggle="tab" href="#menu2">Áreas de conocimiento</a></li>
-        <li><a data-toggle="tab" href="#menu2">Habilidades personales</a></li>
-        <li><a data-toggle="tab" href="#menu2">Habilidades profesionales</a></li>
+        <li class="active"><a data-toggle="tab" href="#generales">Generales</a></li>
+        <li><a data-toggle="tab" href="#deportes">Deportes</a></li>
+        <li><a data-toggle="tab" href="#artes">Artes</a></li>
     </ul>
 
     <div class="tab-content">
-        <div id="home" class="tab-pane fade in active">
-            <h3>Gustos</h3>
-            <p>Some content.</p>
+        <div id="generales" class="tab-pane fade in active">
+            <br>
+            <div class="row">
+                <div class="col-xs-3" *ngFor="let g of gustosGenerales">
+                    <a [ngClass]="isCheck(g) ? 'thumbnail check':'thumbnail'" (click)="check(g)"><img src="../../static/images/gustos/{{g.imagePath}}" class="img-responsive"></a>
+                </div>
+            </div>
         </div>
-        <div id="menu1" class="tab-pane fade">
-            <h3>Gustos</h3>
-            <p>Some content in menu 1.</p>
+        <div id="deportes" class="tab-pane fade">
+            <br>
+            <div class="row">
+                <div class="col-xs-3" *ngFor="let g of gustosDeportes">
+                    <a [ngClass]="isCheck(g) ? 'thumbnail check':'thumbnail'" (click)="check(g)"><img src="../../static/images/gustos/{{g.imagePath}}" class="img-responsive"></a>
+                </div>
+            </div>
         </div>
-        <div id="menu2" class="tab-pane fade">
-            <h3>Gustos</h3>
-            <p>Some content in menu 2.</p>
+        <div id="artes" class="tab-pane fade">
+            <br>
+            <div class="row">
+                <div class="col-xs-3" *ngFor="let g of gustosArtes">
+                    <a [ngClass]="isCheck(g) ? 'thumbnail check':'thumbnail'" (click)="check(g)"><img src="../../static/images/gustos/{{g.imagePath}}" class="img-responsive"></a>
+                </div>
+            </div>
         </div>
     </div>
+    <button (click)="checkGustos()" class="btn btn-primary btn-block">Continuar</button>
+</div>
+
+<div *ngIf="(currentStep == 5 && tipoUsuario=='ESTUDIANTE')
+            || (currentStep == 4 && tipoUsuario=='EGRESADO')" class="well well-lg">
+    <form novalidate class="form-horizontal" (ngSubmit)="verifyStep5()">
+        <h2>Perfil de usuario</h2>
+        <p>En cada una de las siguientes pestañas seleccione sus énfasis y las áreas de conocimiento que le interesan.</p>
+        <ul class="nav nav-tabs">
+            <li class="active"><a data-toggle="tab" href="#enfasis">Mis énfasis</a></li>
+            <li><a data-toggle="tab" href="#ac">Mis áreas de conocimiento</a></li>
+        </ul>
+
+        <div class="tab-content">
+            <div id="enfasis" class="tab-pane fade in active">
+                <br>
+                <h2>Énfasis de {{carrera.nombre}}</h2>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Énfasis principal</label>
+                    <div class="col-sm-10">
+                        <select class="form-control" [(ngModel)]="enfasisPrincipal" name="enfasisPrincipal">
+                            <option *ngFor="let e of enfasisCarrera" [ngValue]="e" >{{e}}</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Énfasis Secundario</label>
+                    <div class="col-sm-10">
+                        <select class="form-control" [(ngModel)]="enfasisSecundario" name="enfasisSecundario">
+                            <option value="null">Ninguna</option>
+                            <option *ngFor="let e of enfasisCarrera" [ngValue]="e" >{{e}}</option>
+                        </select>
+                    </div>
+                </div>
+                <div *ngIf="segundaCarrera">
+                    <h2>Énfasis de {{segundaCarrera.nombre}}</h2>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Énfasis principal</label>
+                        <div class="col-sm-10">
+                            <select class="form-control" [(ngModel)]="enfasisPrincipalSegundaCarrera" name="enfasisPrincipalSegundaCarrera">
+                                <option *ngFor="let e of enfasisSegundaCarrera" [ngValue]="e" >{{e}}</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Énfasis secundario</label>
+                        <div class="col-sm-10">
+                            <select class="form-control" [(ngModel)]="enfasisSecundarioSegundaCarrera" name="enfasisSecundarioSegundaCarrera">
+                                <option value="null">Ninguna</option>
+                                <option *ngFor="let e of enfasisSegundaCarrera" [ngValue]="e" >{{e}}</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div id="ac" class="tab-pane fade">
+                <br>
+                <h2>Áreas de conocimiento de {{carrera.nombre}}</h2>
+                <div class="form-group">
+                    <div class="col-sm-4" *ngFor="let ac of ACCarrera; let i of index">
+                        <label><input name="ac_$i" type="checkbox" (click)="checkACPrincipal(ac)"/>{{ac}}</label>
+                    </div>
+                </div>
+                <div *ngIf="segundaCarrera">
+                    <h2>Áreas de conocimiento de {{segundaCarrera.nombre}}</h2>
+                    <div class="form-group">
+                        <div class="col-sm-4" *ngFor="let ac of ACSegundaCarrera; let i of index">
+                            <label><input name="ac2_$i" type="checkbox" (click)="checkACSecundario(ac)"/>{{ac}}</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <button class="btn btn-primary btn-block">Continuar</button>
+    </form>
+</div>
+
+<div *ngIf="(currentStep == 6 && tipoUsuario=='ESTUDIANTE')
+            || (currentStep == 5 && tipoUsuario=='EGRESADO')" class="well well-lg">
+    <form novalidate class="form-horizontal" (ngSubmit)="sendRequestSignUp()">
+        <h2>Perfil de usuario</h2>
+        <p>En cada una de las siguientes pestañas seleccione sus habilidades personales y profesionales.</p>
+        <ul class="nav nav-tabs">
+            <li class="active"><a data-toggle="tab" href="#personales">Habilidades Personales</a></li>
+            <li><a data-toggle="tab" href="#profesionales">Habilidades Profesionales</a></li>
+        </ul>
+
+        <div class="tab-content">
+            <div id="personales" class="tab-pane fade in active">
+                <h2>Habilidades personales</h2>
+                <div class="form-group">
+                    <div class="col-sm-4" *ngFor="let h of habilidadesPersonales; let i of index">
+                        <label><input name="hp_$i" type="checkbox" value="h"/>{{h.nombre}}</label>
+                    </div>
+                </div>
+            </div>
+            <div id="profesionales" class="tab-pane fade">
+                <br>
+                <h2>Habilidades profesionales de {{carrera.nombre}}</h2>
+                <div class="form-group">
+                    <div class="col-sm-4" *ngFor="let h of habilidadProfesionalesPrimera; let i of index">
+                        <label><input name="h_$i" type="checkbox" value="h"/>{{h.nombre}}</label>
+                    </div>
+                </div>
+                <div *ngIf="segundaCarrera">
+                    <h2>Habilidades profesionales de {{segundaCarrera.nombre}}</h2>
+                    <div class="form-group">
+                        <div class="col-sm-4" *ngFor="let h of habilidadProfesionalesSegunda; let i of index">
+                            <label><input name="h2_$i" type="checkbox" value="h"/>{{h.nombre}}</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">Finalizar</button>
+    </form>
+</div>
+
+<div *ngIf="(currentStep == 4 && tipoUsuario=='PROFESOR')" class="well well-lg">
+    <form novalidate class="form-horizontal" (ngSubmit)="verifyStep4Profesor()">
+        <h2>Perfil de usuario</h2>
+        <p>En cada una de las siguientes pestañas seleccione sus énfasis y las áreas de conocimiento en las que tiene experiencia.</p>
+        <ul class="nav nav-tabs">
+            <li class="active"><a data-toggle="tab" href="#enfasis">Mis énfasis</a></li>
+            <li><a data-toggle="tab" href="#ac">Mis áreas de conocimiento</a></li>
+        </ul>
+
+        <div class="tab-content">
+            <div id="enfasis" class="tab-pane fade in active">
+                <br>
+                <h2>Énfasis de {{carrera.nombre}}</h2>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Énfasis principal</label>
+                    <div class="col-sm-10">
+                        <select class="form-control" [(ngModel)]="enfasisPrincipal" name="enfasisPrincipal">
+                            <option *ngFor="let e of enfasisCarrera" [ngValue]="e" >{{e}}</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Énfasis Secundario</label>
+                    <div class="col-sm-10">
+                        <select class="form-control" [(ngModel)]="enfasisSecundario" name="enfasisSecundario">
+                            <option value="null">Ninguna</option>
+                            <option *ngFor="let e of enfasisCarrera" [ngValue]="e" >{{e}}</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <div id="ac" class="tab-pane fade">
+                <br>
+                <h2>Mi experiencia en Áreas de Conocimiento de {{carrera.nombre}}</h2>
+                <div class="form-group" *ngFor="let ac of ACCarrera; let i of index">
+                    <div class="col-sm-6 aconocimiento">
+                        <label><input name="ac_$i" type="checkbox" (click)="checkACPrincipal(ac)"/>{{ac}}</label>
+                    </div>
+                    <div class="col-sm-6">
+                        <select class="form-control" name="percentageAC">
+                            <option>1</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">Continuar</button>
+    </form>
+</div>
+
+<div *ngIf="(currentStep == 5 && tipoUsuario=='PROFESOR')" class="well well-lg">
+    <form novalidate class="form-horizontal" (ngSubmit)="sendRequestSignUp()">
+        <h2>Perfil de usuario</h2>
+        <p>En cada una de las siguientes pestañas seleccione sus cualidades como profesor y como profesional.</p>
+        <ul class="nav nav-tabs">
+            <li class="active"><a data-toggle="tab" href="#profesor">Cualidades como Profesor</a></li>
+            <li><a data-toggle="tab" href="#profesional">Cualidades como Profesional</a></li>
+        </ul>
+
+        <div class="tab-content">
+            <div id="profesor" class="tab-pane fade in active">
+            </div>
+        </div>
+        <div class="tab-content">
+            <div id="profesional" class="tab-pane fade">
+            </div>
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">Finalizar</button>
+    </form>
 </div>
