--- a/app/access/signup.component.html
+++ b/app/access/signup.component.html
@@ -237,7 +237,7 @@
                     <label class="col-sm-2 control-label">Énfasis principal</label>
                     <div class="col-sm-10">
                         <select [(ngModel)]="enfasisPrincipal" class="form-control" name="enfasisPrincipal">
-                            <option *ngFor="let e of enfasisCarrera" [ngValue]="e" >{{e}}</option>
+                            <option *ngFor="let e of enfasisCarrera" [ngValue]="e" >{{e.nombre}}</option>
                         </select>
                     </div>
                 </div>
@@ -246,7 +246,7 @@
                     <div class="col-sm-10">
                         <select [(ngModel)]="enfasisSecundario" class="form-control" name="enfasisSecundario">
                             <option value="null">Ninguna</option>
-                            <option *ngFor="let e of enfasisCarrera" [ngValue]="e" >{{e}}</option>
+                            <option *ngFor="let e of enfasisCarrera" [ngValue]="e" >{{e.nombre}}</option>
                         </select>
                     </div>
                 </div>
@@ -256,7 +256,7 @@
                         <label class="col-sm-2 control-label">Énfasis principal</label>
                         <div class="col-sm-10">
                             <select [(ngModel)]="enfasisPrincipalSegundaCarrera" class="form-control" name="enfasisPrincipalSegundaCarrera">
-                                <option *ngFor="let e of enfasisSegundaCarrera" [ngValue]="e" >{{e}}</option>
+                                <option *ngFor="let e of enfasisSegundaCarrera" [ngValue]="e" >{{e.nombre}}</option>
                             </select>
                         </div>
                     </div>
@@ -265,7 +265,7 @@
                         <div class="col-sm-10">
                             <select [(ngModel)]="enfasisSecundarioSegundaCarrera" class="form-control" name="enfasisSecundarioSegundaCarrera">
                                 <option value="null">Ninguna</option>
-                                <option *ngFor="let e of enfasisSegundaCarrera" [ngValue]="e" >{{e}}</option>
+                                <option *ngFor="let e of enfasisSegundaCarrera" [ngValue]="e" >{{e.nombre}}</option>
                             </select>
                         </div>
                     </div>
@@ -277,14 +277,14 @@
                 <h2>Áreas de conocimiento de {{carrera.nombre}}</h2>
                 <div class="form-group">
                     <div class="col-sm-4" *ngFor="let ac of ACCarrera; let i of index">
-                        <label><input name="ac_$i" type="checkbox" (click)="checkACPrincipal(ac)"/>{{ac}}</label>
+                        <label><input name="ac_$i" type="checkbox" (click)="checkACPrincipal(ac)"/>{{ac.nombre}}</label>
                     </div>
                 </div>
                 <div *ngIf="segundaCarrera">
                     <h2>Áreas de conocimiento de {{segundaCarrera.nombre}}</h2>
                     <div class="form-group">
                         <div class="col-sm-4" *ngFor="let ac of ACSegundaCarrera; let i of index">
-                            <label><input name="ac2_$i" type="checkbox" (click)="checkACSecundario(ac)"/>{{ac}}</label>
+                            <label><input name="ac2_$i" type="checkbox" (click)="checkACSecundario(ac)"/>{{ac.nombre}}</label>
                         </div>
                     </div>
                 </div>
@@ -352,7 +352,7 @@
                     <label class="col-sm-2 control-label">Énfasis principal</label>
                     <div class="col-sm-10">
                         <select [(ngModel)]="enfasisPrincipal" class="form-control" name="enfasisPrincipal">
-                            <option *ngFor="let e of enfasisCarrera" [ngValue]="e" >{{e}}</option>
+                            <option *ngFor="let e of enfasisCarrera" [ngValue]="e" >{{e.nombre}}</option>
                         </select>
                     </div>
                 </div>
@@ -361,7 +361,7 @@
                     <div class="col-sm-10">
                         <select [(ngModel)]="enfasisSecundario" class="form-control" name="enfasisSecundario">
                             <option value="null">Ninguna</option>
-                            <option *ngFor="let e of enfasisCarrera" [ngValue]="e" >{{e}}</option>
+                            <option *ngFor="let e of enfasisCarrera" [ngValue]="e" >{{e.nombre}}</option>
                         </select>
                     </div>
                 </div>
@@ -371,11 +371,21 @@
                 <h2>Mi experiencia en Áreas de Conocimiento de {{carrera.nombre}}</h2>
                 <div class="form-group" *ngFor="let ac of ACCarrera; let i of index">
                     <div class="col-sm-6 aconocimiento">
-                        <label><input name="ac_$i" type="checkbox" (click)="checkACPrincipal(ac)"/>{{ac}}</label>
+                        <label><input name="ac_$i" type="checkbox" (click)="checkACPrincipal(ac)"/>{{ac.nombre}}</label>
                     </div>
                     <div class="col-sm-6">
-                        <select class="form-control" name="percentageAC">
-                            <option>1</option>
+                        <select [(ngModel)]="ac.porcentaje" class="form-control" name="percentageAC">
+                            <option value=0>0%</option>
+                            <option value=10>10%</option>
+                            <option value=20>20%</option>
+                            <option value=30>30%</option>
+                            <option value=40>40%</option>
+                            <option value=50>50%</option>
+                            <option value=60>60%</option>
+                            <option value=70>70%</option>
+                            <option value=80>80%</option>
+                            <option value=90>90%</option>
+                            <option value=100>100%</option>
                         </select>
                     </div>
                 </div>
