--- a/app/access/signup.component.html
+++ b/app/access/signup.component.html
@@ -5,19 +5,19 @@
             <div class="stepwizard-step">
                 <div [ngClass]="currentStep == 1 ? 'btn btn-primary btn-circle':'btn btn-default btn-circle'">1</div>
             </div>
-            <div (click)="verifyStep1()" class="stepwizard-step">
+            <div class="stepwizard-step">
                 <div [ngClass]="currentStep == 2 ? 'btn btn-primary btn-circle':'btn btn-default btn-circle'">2</div>
             </div>
-            <div (click)="verifyStep2()" class="stepwizard-step">
+            <div class="stepwizard-step">
                 <div [ngClass]="currentStep == 3 ? 'btn btn-primary btn-circle':'btn btn-default btn-circle'">3</div>
             </div>
-            <div (click)="verifyStep3()" class="stepwizard-step">
+            <div class="stepwizard-step">
                 <div [ngClass]="currentStep == 4 ? 'btn btn-primary btn-circle':'btn btn-default btn-circle'">4</div>
             </div>
-            <div (click)="verifyStep3()" class="stepwizard-step">
+            <div class="stepwizard-step">
                 <div [ngClass]="currentStep == 5 ? 'btn btn-primary btn-circle':'btn btn-default btn-circle'">5</div>
             </div>
-            <div *ngIf="tipoUsuario=='ESTUDIANTE'" (click)="verifyStep3()" class="stepwizard-step">
+            <div *ngIf="tipoUsuario=='ESTUDIANTE'" class="stepwizard-step">
                 <div [ngClass]="currentStep == 6 ? 'btn btn-primary btn-circle':'btn btn-default btn-circle'">6</div>
             </div>
         </div>
